Updated folders and files

--- a/dbt-tutorial/dbt_tutorial/dbt_project.yml
+++ b/dbt-tutorial/dbt_tutorial/dbt_project.yml
@@ -31,7 +31,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbt_tutorial:
+    staging:
+      +materialized: view
+    warehouse:
       +materialized: table
-      +persist_docs:
-        relation: true
-        column: true
